--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "ts-node index.ts"
 	},
 	"dependencies": {
+		"@fastify/static": "^7.0.3",
 		"axios": "^1.6.8",
 		"dotenv": "^16.4.5",
 		"fastify": "^4.26.2"
