--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"repository": "https://github.com/survives-dev/20240410-backend.git",
 	"license": "MIT",
 	"scripts": {
-		"start": "ts-node index.ts"
+		"start": "ts-node src/index.ts"
 	},
 	"dependencies": {
 		"@fastify/static": "^7.0.3",
