Fixed to be able to start

--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 {
-	"origin": "http://0.0.0.0:8000",
-	"preferredUsername": "a",
-	"name": "Alice",
-	"me": "http://0.0.0.0:8000",
-	"maxAge": 86400
+  "origin": "http://localhost:8000",
+  "preferredUsername": "a",
+  "name": "Alice",
+  "me": "https://www.example.com",
+  "maxAge": 86400
 }
