--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,15 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/node
+
+secret.txt
+id_ecdsa
+id_ecdsa.pub
+id_ed25519
+id_ed25519.pub
+id_rsa
+id_rsa.pub
+secret.txt
+ssl-cert-snakeoil.key
+ssl-cert-snakeoil.pem
+/data/config.json
